--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my portfolio website">
+    <link rel="icon" type="image/png" href="./image/logo.png">
     <link rel="stylesheet" href="style.css">
     <title>Hi there welcome to my portfolio</title>
 </head>
@@ -53,9 +54,8 @@
 
 
         <section class="about" id = "about">
-            <div class="about-heading">
-                <h1 class="title">My Skills</h1>
-            </div>
+            <h2 class="heading">My Skills</h2>
+
             <div class="skills-container">
         <!-- Python Card -->
         <div class="skill-card python-card">
@@ -85,9 +85,8 @@
 
 
         <section class="my-links" id = "my-links">
-            <div class="links-heading">
-                <h1 class="title">My Links </h1>
-            </div>
+            <h2 class="heading">My links</h2>
+
             <div class="links-container">
                 <!-- Instagram Card -->
                 <div class="card instagram">
@@ -114,7 +113,7 @@
                     <div class="content">
                         <h2>Telegram</h2>
                         <p>Contact me directly for quick communication and support!</p>
-                        <button class="button" onclick="window.open('https://t.me/yugansh_ag', '_blank')">Message Now</button>
+                        <button class="button" onclick="window.open('https://t.me/Yug_anshag', '_blank')">Message Now</button>
                     </div>
                 </div>
         
@@ -136,25 +135,28 @@
 
 
         <section class="contact" id="contact">
-            <h1 class="title">CONTACT ME</h1>
-            <div class="contact-card">
-
-                <form>
-                    <label for="name"></label>
-                    <input type="text" id="name" placeholder="Your name">
-
-                    <label for="email"></label>
-                    <input type="email" id="email" placeholder="Your Email">
-
-                    <label for="subject"></label>
-                    <input type="text" id="subject" placeholder="Subject">
-
-                    <label for="message"></label>
-                    <textarea id="message" placeholder="Your message"></textarea>
-
-                    <button type="submit" class="send-btn">Send</button>
-                </form>
+            <h2 class="heading">Contact Me</h2>
+    <div class="contact-card">
+        <form>
+            <div class="input-group">
+                <input type="text" id="name" placeholder=" " required>
+                <label for="name">Name</label>
             </div>
+            <div class="input-group">
+                <input type="email" id="email" placeholder=" " required>
+                <label for="email">Email</label>
+            </div>
+            <div class="input-group">
+                <input type="text" id="subject" placeholder=" " required>
+                <label for="subject">Subject</label>
+            </div>
+            <div class="input-group">
+                <textarea id="message" placeholder=" " required></textarea>
+                <label for="message">Your Message</label>
+            </div>
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+    </div>
         </section>
 
 
@@ -178,7 +180,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path 
                                 d="M12 2c2.717 0 3.056.01 4.122.06 1.065.05 1.79.217 2.428.465.66.254 1.216.598 1.772 1.153a4.908 4.908 0 0 1 1.153 1.772c.247.637.415 1.363.465 2.428.047 1.066.06 1.405.06 4.122 0 2.717-.01 3.056-.06 4.122-.05 1.065-.218 1.79-.465 2.428a4.883 4.883 0 0 1-1.153 1.772 4.915 4.915 0 0 1-1.772 1.153c-.637.247-1.363.415-2.428.465-1.066.047-1.405.06-4.122.06-2.717 0-3.056-.01-4.122-.06-1.065-.05-1.79-.218-2.428-.465a4.89 4.89 0 0 1-1.772-1.153 4.904 4.904 0 0 1-1.153-1.772c-.247-.637-.415-1.363-.465-2.428C2.013 15.056 2 14.717 2 12c0-2.717.01-3.056.06-4.122.05-1.066.217-1.79.465-2.428a4.88 4.88 0 0 1 1.153-1.772A4.897 4.897 0 0 1 5.45 2.525c.638-.248 1.362-.415 2.428-.465C8.944 2.013 9.283 2 12 2zm0 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm6.5-.25a1.25 1.25 0 0 0-2.5 0 1.25 1.25 0 0 0 2.5 0zM12 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6z."/></svg>
                         </a>
-                        <a href="https://t.me/yugansh_ag" target="_blank" rel="noopener noreferrer">
+                        <a href="https://t.me/Yug_anshag" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.72-.41.96-.67.98-.58.05-.99-.38-1.53-.75-.85-.56-1.33-.91-2.15-1.47-.93-.63-.33-1.01.21-1.59.14-.15 2.31-2.06 2.35-2.24.02-.06.02-.28-.1-.4s-.34-.09-.49-.05c-.21.05-3.43 2.14-4.84 3.07-.46.3-.88.44-1.25.44-.42 0-1.22-.27-1.82-.49-.73-.27-1.31-.42-1.26-.89.03-.28.33-.57.91-.86 4.02-1.82 6.7-3.09 8.06-3.61 3.33-1.28 4.03-1.5 4.48-1.51.1-.01.33.02.48.18.12.13.13.3.13.33z"/>
                             </svg>
